Update app's name and logo, fix bug with emoji market, fix bug with horizontal scroll, fix bug with wrong audio messages render

--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -22,7 +22,7 @@
 
             @media screen and (max-device-width: 480px) {
                 width: 80%;
-                margin: 9px 0 0;
+                margin: 9px 5px 0;
             }
         }
 
